--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "clio",
+  "name": "dreamworld-driftwood",
   "version": "0.1.0",
+  "homepage": "https://strtmack.github.io/dreamworld",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -10,6 +11,7 @@
     "@testing-library/user-event": "^12.6.3",
     "easybase-react": "^1.3.16",
     "framer-motion": "^3.3.0",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -18,6 +20,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
